# CasualTrader

./: .coverage  .gitignore  .mcp.json  .pre-commit-config.yaml  BUGFIX_REPORT.md  CLAUDE.md  CRITICAL_FIXES.md  DESIGN_SPECIFICATION.md  E2E_IMPLEMENTATION_REPORT.md  E2E_SUMMARY.md  GEMINI.md  IMPLEMENTATION_GUIDE.md  PHASE2_4_DOCS_UPDATE_TRACKER.md  PHASE2_COMPLETION_SUMMARY.md  PHASE2_TEST_ORGANIZATION_COMPLETE.md  PHASE3_IMPLEMENTATION_SUMMARY.md  QUICK_REFERENCE.md  README.md  README_REFACTOR.md  README_UVX.md  REFACTOR_INDEX.md  REFACTOR_MILESTONE.md  REFACTOR_PLAN.md  REFACTOR_PROGRESS.md  REFACTOR_QUICK_REF.md  REFACTOR_README.md  REFACTOR_SUMMARY.md  SECURITY_ANALYSIS.md  SECURITY_CHECKLIST.md  SECURITY_REVIEW_SUMMARY.md  TASK_003_IMPLEMENTATION.md  TASK_003_PR_READINESS.md  casualtrader.db  categories.txt  coverage.xml  debug_api.py  demo_enhanced_client.py  demo_rate_limiting.py  install.sh  pyproject.toml  (+6 more)
backend/: .env.example  MISSING_ROUTES.md  README.md  casualtrader.db  conftest.py  pyproject.toml  rebuild_agent_holdings.py  rebuild_agent_performance.py  rebuild_agent_performance_pg.py  run_server.py  test_agent_tools_validation.py  test_mode_switch.py  test_session_detail_api.py  test_tools_import.py  verify_bug_fix.py
backend/src/: generate_interview_audio_dual.py
backend/src/agents/: POC_README.md  __init__.py  models.py  poc_full_workflow.py  poc_trading_agent.py  state.py  subagent_loader.py  trading_agent.py
backend/src/api/: app.py  config.py  dependencies.py  docs.py  holiday_client.py  mcp_client.py  models.py  server.py  websocket.py
backend/src/common/: __init__.py  agent_utils.py  enums.py  logger.py  time_utils.py
backend/src/database/: __init__.py  agent_database_service.py  agent_service.py  init.py  migrations.py  models.py  poc_agent_service.py  schema.sql  seed_ai_models.py
backend/src/schemas/: __init__.py  agent.py  dashboard.py  trading.py  websocket.py
backend/src/service/: __init__.py  agent_executor.py  agents_service.py  dashboard_service.py  dashboard_utils.py  models.py  session_service.py  trading_service.py
backend/src/trading/: config.py  models.py  state.py  tool_config.py  trading_agent.py
backend/tests/: CodeInterpreterTool_Lab.ipynb  FundamentalAgent_Lab.ipynb  README.md  RiskAgent_Lab.ipynb  SentimentAgent_Lab.ipynb  TEST_CLEANUP_PLAN.md  TechnicalAgent_Lab.ipynb  WebSearchTool_Lab.ipynb  __init__.py  conftest.py  migrate_sqlite_to_postgres.py  test_api_integration.py  test_api_start_endpoint.py  test_complete_verification.py  test_core_imports.py  test_current_funds.py  test_e2e_real_integration.py  test_e2e_scenarios.py  test_imports.py  test_mcp_simple.py  test_single_mode_execution.py  test_start_agent_direct.py  test_start_agent_e2e.py  test_trading_integration.py  test_trading_tools.py  verify_bug_fix.py  verify_changes.py  verify_changes_simple.py  verify_datetime_fix.py  verify_mcp_config.py
backend/tests/api/: test_phase3_api.py
backend/tests/contract/: __init__.py  conftest.py  test_datetime_timezone_contract.py  test_migration_contract.py  test_orm_db_contract.py  test_service_contract.py  test_transaction_status_contract.py
backend/tests/database/: test_agent_infrastructure.py  test_agent_service.py  test_market_status_mcp.py  test_migration.py
backend/tests/e2e/: __init__.py  conftest.py  test_api_contract_checklist.py  test_api_contract_supplement.py  test_api_start_endpoint.py  test_async_execution_flow.py  test_complete_user_workflow.py  test_database_verification.py  test_delete_agent_e2e.py  test_e2e_improved_mocking.py  test_e2e_real_integration.py  test_e2e_scenarios.py  test_frontend_backend_contract.py  test_frontend_execution_ui.py  test_mode_switch_e2e.py  test_openai_integration.sh  test_performance.py  test_phase4_regression.py  test_refactor.py  test_refactor_simple.py  test_sentiment_agent_e2e.py  test_start_agent_e2e.py  test_tc001_fix.py
backend/tests/integration/: conftest.py  test_agent_crud_integration.py  test_agent_execution_api.py  test_agent_execution_api_simple.py  test_agent_tools_robustness.py  test_agents_api_router.py  test_api_integration.py  test_cleanup_sessions.py  test_current_funds.py  test_datetime_timezone_integration.py  test_db_connection.py  test_delete_agent_integration.py  (+17 more)
(+433 files in other folders)
